--- a/packaging/baselibs.conf
+++ b/packaging/baselibs.conf
@@ -1,4 +1,4 @@
-libgdbm3
+libgdbm
 gdbm-devel
   requires -gdbm-<targettype>
-  requires "libgdbm3-<targettype> = <version>"
+  requires "libgdbm-<targettype> = <version>"
