Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,9 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/uncategorized
 [project]
-	description = "Domain: Base;"\n\
-"Maintainers: Shinjae Lee;"\n\
-"Integrators: Moochang Kim;"\n\
-"Reviewers: Jungmin Cho;"\n\
-"Licenses: GPL-3.0+,GPL,FSF;"\n\
-
+	description = "Domain: System / Uncategorized;"
